--- a/Iterative_Design.html
+++ b/Iterative_Design.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>SleepyPuppy404 Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/iterative_design.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
