--- a/Responsive_Redesign.html
+++ b/Responsive_Redesign.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>SleepyPuppy404 Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/responsive_redesign.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -50,7 +51,8 @@
             <div style="border-radius: 10px; padding: 4%  ; border: 10px solid white;">
               For a project like this, the best place to start was the original site. Although I knew I wanted to get rid of
               the entire asthetic of the site, I wanted to preserve as much of the information as possible. In addition,
-              since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes
+              since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes. Thus,
+              I wanted to transition it over to a warmer, light brown color scheme.
             </div>
           </div>
           <div>
@@ -72,7 +74,9 @@
             There were two halves to what I wanted to do with this project. The first was to clean up this website completely, removing
             superflours content. This essentially meant simplifying a lot of the format. To do so, I added a menu bar with larger text,
             and used images of the bagels to emphasize the actual selling point of the buisness. The second was to make it responsive to different web formats. 
-            In order to do so, I developed a low fi design for each format: Web, Mobile, and Tablet:
+            In order to do so, I developed a low fidelity design for each format: Web, Mobile, and Tablet. The goal of these low fidelity designs were overall
+            to reduce clutter, make the asthetic lighter, and emphasize the product (in this case, bagels). In addition, to maintain a low sense of clutter,
+            I added a hamburger menu for smaller devices, in hopes of making the bagel images clearer.
           </div>
         </div>
         <br>
@@ -97,9 +101,9 @@
         <h1 data-aos="fade-in">Hi-Fi Prototype</h1>
         <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; text-align: left; background-color: #503225; border-radius: 10px; padding: 1%;">
           <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
-            For a project like this, the best place to start was the original site. Although I knew I wanted to get rid of
-            the entire asthetic of the site, I wanted to preserve as much of the information as possible. In addition,
-            since the restaurant is called Bagel Gourmet CAFE, I wanted to mimic the warm and friendly asthetic of local, small cafes
+            Following the conclusion of the lo fi design stage, I wanted to make a prototype from which I could construct an actual website.
+            To accomplish this, I utilized Figma to make a Visual Design Guide, with the hopes that from there, constructing the website would be far easier.
+            After finishing this design guide, I used its components to make the prototype site for web, mobile, and tablet.
           </div>
         </div>
           <h2 style="margin-top: 5vh;">Visual Design Guide</h1>
@@ -108,12 +112,14 @@
               <img src="images/redesign/visualstyledesignguide.png" style="width: 80%; border-radius: 50px;">
             </a>
           </div>
+          <h3 style="color:#4d2e20; font-family:  DM Sans, sans-serif; font-size: 3vh;">Click on the image to visit this in Figma!</h3>
           <h2 style="margin-top: 5vh;">Website Prototype:</h1>
           <div class="box">
             <a href="https://www.figma.com/proto/f1CWXMAOkEKlL1DjvaVUX8/Untitled?node-id=103%3A155&scaling=min-zoom&page-id=4%3A38">
               <img src="images/redesign/home_page.png" style="width: 80%; border-radius: 50px">
             </a>
           </div>
+          <h3 style="color:#4d2e20; font-family:  DM Sans, sans-serif; font-size: 3vh;">Click on the image to visit this in Figma!</h3>
           <br><br>
           <h2 style="margin-top: 5vh;">Mobile and Tablet Page:</h1>
           <div style="display: flex; text-align: center; margin-left: auto; margin-right: auto; width: 80%;">
@@ -128,6 +134,7 @@
               </a>
             </div>
           </div>
+          <h3 style="color:#4d2e20; font-family:  DM Sans, sans-serif; font-size: 3vh;">Click on the images to visit them in Figma!</h3>
       </div>
       <br><br id = "Wrap Up"><br><br>
       <div style="color: black; text-align: center; width: 70%; margin-left: auto; margin-right: auto;" class="boxthing" data-aos="fade-in">
@@ -137,6 +144,8 @@
           <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
             Following the prototyping process, the next step was to put together a redesigned version of the website.
             This redesign was done exclusively in HTML/CSS/Javascript, in an effort to attempt to use basic elements.
+            After all the work creating initial versions of the site, and working through the design process, I put together this site
+            utilizing the prototyped versions, which you can visit below.
           </div>
         </div>
         <div style="height: 2vh;"></div>
@@ -145,6 +154,7 @@
             <img src="images/redesign/site.png" style="width: 70%; border-radius: 50px; z-index: 2; padding: 2vh;">
           </a>
         </div>
+        <a href="https://sleepypuppy404.github.io/responsive_redesign_site/" style="color:#4d2e20; font-family:  DM Sans, sans-serif; font-size: 3vh;">Click on the image or click me to visit!</a>
       </div>
       <div style="color: black; text-align: center; width: 70%; margin: auto; margin-top: 6vh;" class="boxthing" data-aos="fade-in">
         <h2 class="head" data-aos="fade-in">Takeaways</h2>
