--- a/personas.html
+++ b/personas.html
@@ -126,7 +126,8 @@
         <div style="color: black; font-family: DM Sans, sans-serif; color: white; font-size: 3vh; width: 80%; margin: auto; margin-bottom: 7vh; text-align: left; background-color: #476A6F; border-radius: 10px; padding: 1%;">
             <div style="border-radius: 10px; padding: 4%; border: 10px solid white;">
               After finishing up the final Persona, the final step was to create a storyboard describing the user experience. The goal of this was to provide an
-              authentic, emotional, simple, and humerous story showcasing what the experience was like. 
+              authentic, emotional, simple, and humerous story showcasing what the experience was like. Utilizing the persona of "Stressed Matt" from above, I 
+              worked to flesh out his character, attempting to put myself into his mindset and think about his circumstances. This directly led to the storyboard shown below.
             </div>
         </div>
         <h2>Storyboard: Stressed Matt's Quest</h2>
